Fix header out of place

--- a/ckanext/panama/fanstatic/css/panamatheme.css
+++ b/ckanext/panama/fanstatic/css/panamatheme.css
@@ -256,6 +256,7 @@ header,
 
 .navbar .nav > li > a {
     padding-right: 5px;
+    padding-left: 9px;
 }
 
 #mainnav a {
